Fix alignment

--- a/apps/nextjs/src/css/main.css
+++ b/apps/nextjs/src/css/main.css
@@ -5,3 +5,7 @@
 .rdt {
     position: static;
 }
+
+.rdtPicker {
+    right: 0;
+}
